k8s_manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: comments-server
  name: comments-svc
spec:
  ports:
    - port: 4001
      protocol: TCP
      targetPort: 4001
  selector:
    app: comments-server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: posts-server
  name: posts-svc-clusterip
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: posts-server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: query-server
  name: query-svc
spec:
  ports:
    - port: 4002
      protocol: TCP
      targetPort: 4002
  selector:
    app: query-server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: event-bus
  name: event-bus-svc
spec:
  ports:
    - port: 4005
      protocol: TCP
      targetPort: 4005
  selector:
    app: event-bus
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: moderation-server
  name: moderation-svc
spec:
  ports:
    - port: 4003
      protocol: TCP
      targetPort: 4003
  selector:
    app: moderation-server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: posts-server
  name: posts-svc
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: posts-server
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: blogapp-svc
  name: blogapp-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: blogapp
status:
  loadBalancer: {}
